[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Jon Chambers <jon.chambers@gmail.com>"]
edition = "2018"

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
simple-error = "0.2.2"
ksum = {path = "./src/ksum"}
